# grepit

./: CMakeLists.txt  README.md  build.sh  build_test.sh  hpc_regex_benchmark.ipynb  test_simple.cpp
benchmark/: main.cpp  performance_tests.cpp
examples/: basic_usage.cpp  large_text_processing.cpp
include/: benchmarking.h  cuda_utils.h  hpc_regex.h  memory_manager.h  regex_engine.h  text_processor.h
src/: benchmarking.cpp  cuda_kernels.cu  cuda_utils.cu  gpu_memory_manager.cu  hpc_regex_impl.cpp  memory_manager.cpp  regex_engine_cpu.cpp  regex_engine_gpu.cu
tests/: test_cpu_regex.cpp  test_gpu_regex.cpp  test_main.cpp  test_memory_manager.cpp
